# omicron_crawler

./: .env  .env-linux  .env-windows  .gitignore  .nvim.lua  Cargo.toml  Dockerfile  README.MD  REVERSING.MD  cookie.bak  linkedin_register_flow.chls  setup.sh
collections/azure-api/: bruno.json  manager_bus_profile_complete.bru  manager_bus_search_complete.bru  manager_search.bru  profile_put.bru  profile_take.bru  queue.bru  search_put.bru  search_take.bru
collections/linkedin_api/: authenticate.bru  bruno.json  challenge.bru  people_search.bru  profile.bru  profile_contact_info.bru  profile_experience.bru  profile_skills.bru  session_cookies.bru
collections/omicron/: bruno.json  hello.bru  message.bru  profile.bru  search.bru
convert/: from_search_to_request.py  input.json  output.json
cookies/: zhqbpmn@mydefipet.live
src/: .env  api_client.rs  bus_server.rs  chrome_driver_launcher.rs  config.rs  cookies.rs  driver_ext.rs  driver_pool.rs  driver_service.rs  driver_session.rs  env.rs  errors.rs  lib.rs  linkedin_crawl.rs  logger.rs  macros.rs  main.rs  selenium.rs  server.rs  utils.rs
src/azure/: json.rs  mod.rs
src/driver/: browser_config.rs  driver_capabilities.rs  driver_pool.rs  driver_service.rs  driver_session.rs  mod.rs  service.rs  session.rs  session_initializer.rs  session_manager.rs  traits.rs
src/linkedin/: actions.rs  config.rs  crawler.rs  enums.rs  linkedin_crawler.rs  mod.rs  parse.rs  parse_linkedin.rs  parse_sales.rs  profiles.rs  rate_limits.rs  sales_crawler.rs  tracking_client.rs  utils.rs
src/services/: mod.rs  request.rs
src/session_pool/: mod.rs  traits.rs
src/two_captcha/: config.rs  mod.rs  req.rs  res.rs  traits.rs
test_profilkes/: 2.html
tests/: api_tests.rs  chrome_driver_tests.rs  chrome_parsing_tests.rs  config_tests.rs  driver_tests.rs  mod.rs  parsing_tests.rs  rate_tests.rs
user_data/: DevToolsActivePort  first_party_sets.db
user_data/Default/: BrowsingTopicsState  Conversions  DIPS  History  Login Data  MediaDeviceSalts  Preferences  Top Sites  trusted_vault.pb
user_data/GrShaderCache/: f_00000e  f_000010  f_000011  f_000012  f_000015  f_000017  f_000018  f_000019  f_00001a  f_00001b  f_00001d  (+70 more)
(+1705 files in other folders)
