[package]
name = "omicron_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
thirtyfour = "0.34.0"
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4.22"
http = "1.1.0"
undetected-chromedriver = "0.1.2"
rand = "0.8.5"
regex = "1.11.0"
actix-web = "4"
serde = "1.0.214"

[lib]
path = "src/lib.rs"

[[bin]]
name = "omicron_crawler"
path = "src/main.rs"

[[bin]]
name = "omicron_crawler_server"
path = "src/server.rs"