[package]
name = "omicron_crawler"
version = "0.2.0"
edition = "2021"

[dependencies]
thirtyfour = "0.34.0"
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4.22"
http = "1.1.0"
rand = "0.8.5"
regex = "1.11.0"
actix-web = "4"
serde = "1.0.214"
dotenvy = "0.15.7"
fs_extra = "1.3.0"
crossbeam = "0.8.4"
serde_json = "1.0.132"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
reqwest = { version = "0.12.12", features = ["cookies", "multipart"] }
reqwest_cookie_store = "0.8.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "omicron_crawler"
path = "src/main.rs"

[[bin]]
name = "omicron_crawler_server"
path = "src/server.rs"
